exports[`Storyshots Header GraphQL Subscription tab 1`] = `
<div
  className="ui small inverted header menu">
  <a
    className="item header-logo"
    onClick={[Function]}
    style={Object {}}>
    <img
      alt="logo"
      className="app-logo"
      src="logo.svg" />
    Example App
  </a>
  <a
    className="item"
    onClick={[Function]}
    style={Object {}}>
    Local
  </a>
  <a
    className="item"
    onClick={[Function]}
    style={Object {}}>
    GraphQL
  </a>
  <a
    className="item active"
    onClick={[Function]}
    style={Object {}}>
    GraphQL Subscription
  </a>
  <div
    className="right menu">
    <div
      className="item"
      id="username"
      onClick={[Function]}>
      <i
        aria-hidden="true"
        className="green user icon" />
      bob
    </div>
    <div
      className="item"
      onClick={[Function]}>
      <button
        className="ui button"
        id="signinLink"
        onClick={[Function]}
        tabIndex={undefined}>
        <i
          aria-hidden="true"
          className="log out icon" />
        Sign out
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Header GraphQL tab 1`] = `
<div
  className="ui small inverted header menu">
  <a
    className="item header-logo"
    onClick={[Function]}
    style={Object {}}>
    <img
      alt="logo"
      className="app-logo"
      src="logo.svg" />
    Example App
  </a>
  <a
    className="item"
    onClick={[Function]}
    style={Object {}}>
    Local
  </a>
  <a
    className="item active"
    onClick={[Function]}
    style={Object {}}>
    GraphQL
  </a>
  <a
    className="item"
    onClick={[Function]}
    style={Object {}}>
    GraphQL Subscription
  </a>
  <div
    className="right menu">
    <div
      className="item"
      id="username"
      onClick={[Function]}>
      <i
        aria-hidden="true"
        className="green user icon" />
      bob
    </div>
    <div
      className="item"
      onClick={[Function]}>
      <button
        className="ui button"
        id="signinLink"
        onClick={[Function]}
        tabIndex={undefined}>
        <i
          aria-hidden="true"
          className="log out icon" />
        Sign out
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Header Local tab 1`] = `
<div
  className="ui small inverted header menu">
  <a
    className="item header-logo"
    onClick={[Function]}
    style={Object {}}>
    <img
      alt="logo"
      className="app-logo"
      src="logo.svg" />
    Example App
  </a>
  <a
    className="item active"
    onClick={[Function]}
    style={Object {}}>
    Local
  </a>
  <a
    className="item"
    onClick={[Function]}
    style={Object {}}>
    GraphQL
  </a>
  <a
    className="item"
    onClick={[Function]}
    style={Object {}}>
    GraphQL Subscription
  </a>
  <div
    className="right menu">
    <div
      className="item"
      id="username"
      onClick={[Function]}>
      <i
        aria-hidden="true"
        className="green user icon" />
      bob
    </div>
    <div
      className="item"
      onClick={[Function]}>
      <button
        className="ui button"
        id="signinLink"
        onClick={[Function]}
        tabIndex={undefined}>
        <i
          aria-hidden="true"
          className="log out icon" />
        Sign out
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Header with admin user 1`] = `
<div
  className="ui small inverted header menu">
  <a
    className="item header-logo"
    onClick={[Function]}
    style={Object {}}>
    <img
      alt="logo"
      className="app-logo"
      src="logo.svg" />
    Example App
  </a>
  <a
    className="item"
    onClick={[Function]}
    style={Object {}}>
    Local
  </a>
  <a
    className="item"
    onClick={[Function]}
    style={Object {}}>
    GraphQL
  </a>
  <a
    className="item"
    onClick={[Function]}
    style={Object {}}>
    GraphQL Subscription
  </a>
  <div
    className="right menu">
    <div
      className="item"
      id="username"
      onClick={[Function]}>
      <i
        aria-hidden="true"
        className="red user icon" />
      bob
    </div>
    <div
      className="item"
      onClick={[Function]}>
      <button
        className="ui button"
        id="signinLink"
        onClick={[Function]}
        tabIndex={undefined}>
        <i
          aria-hidden="true"
          className="log out icon" />
        Sign out
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Header with normal user 1`] = `
<div
  className="ui small inverted header menu">
  <a
    className="item header-logo"
    onClick={[Function]}
    style={Object {}}>
    <img
      alt="logo"
      className="app-logo"
      src="logo.svg" />
    Example App
  </a>
  <a
    className="item"
    onClick={[Function]}
    style={Object {}}>
    Local
  </a>
  <a
    className="item"
    onClick={[Function]}
    style={Object {}}>
    GraphQL
  </a>
  <a
    className="item"
    onClick={[Function]}
    style={Object {}}>
    GraphQL Subscription
  </a>
  <div
    className="right menu">
    <div
      className="item"
      id="username"
      onClick={[Function]}>
      <i
        aria-hidden="true"
        className="green user icon" />
      bob
    </div>
    <div
      className="item"
      onClick={[Function]}>
      <button
        className="ui button"
        id="signinLink"
        onClick={[Function]}
        tabIndex={undefined}>
        <i
          aria-hidden="true"
          className="log out icon" />
        Sign out
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Header without auth 1`] = `
<div
  className="ui small inverted header menu">
  <a
    className="item header-logo"
    onClick={[Function]}
    style={Object {}}>
    <img
      alt="logo"
      className="app-logo"
      src="logo.svg" />
    Example App
  </a>
  <a
    className="item"
    onClick={[Function]}
    style={Object {}}>
    Local
  </a>
  <a
    className="item"
    onClick={[Function]}
    style={Object {}}>
    GraphQL
  </a>
  <a
    className="item"
    onClick={[Function]}
    style={Object {}}>
    GraphQL Subscription
  </a>
  <div
    className="right menu">
    <a
      className="item"
      id="signinLink"
      onClick={[Function]}
      style={Object {}}>
      <button
        className="ui button"
        onClick={[Function]}
        tabIndex={undefined}>
        <i
          aria-hidden="true"
          className="sign in icon" />
        Sign in
      </button>
    </a>
  </div>
</div>
`;

exports[`Storyshots Signin Error 1`] = `
<div
  className="ui text container main main-content signin">
  <h1>
    Sign in
  </h1>
  <form
    className="ui form"
    onSubmit={[Function]}>
    <div
      className="field">
      <label
        htmlFor="username">
        Username
      </label>
      <input
        disabled={false}
        id="username"
        name="username"
        type="text" />
    </div>
    <div
      className="field">
      <label
        htmlFor="password">
        Password
      </label>
      <input
        disabled={false}
        id="password"
        name="password"
        type="password" />
    </div>
    <div
      className="field">
      <button
        className="ui positive button"
        id="localSigninButton"
        onClick={[Function]}
        tabIndex={undefined}>
        Sign in
      </button>
    </div>
  </form>
  <h4
    className="ui dividing header">
    Sign in with a Social Media Account
  </h4>
  <button
    className="ui button google plus"
    id="googleSigninButton"
    onClick={[Function]}
    tabIndex={undefined}>
    <i
      aria-hidden="true"
      className="icon google plus" />
    Google Plus
  </button>
  <button
    className="ui button facebook"
    id="facebookSigninButton"
    onClick={[Function]}
    tabIndex={undefined}>
    <i
      className="facebook icon" />
    Facebook
  </button>
  <button
    className="ui button twitter"
    id="twitterSigninButton"
    onClick={[Function]}
    tabIndex={undefined}>
    <i
      className="twitter icon" />
    Twitter
  </button>
  <div />
  <div
    className="ui negative message">
    <div
      className="header">
       signin failed with a 
       status!
    </div>
    <p />
  </div>
</div>
`;

exports[`Storyshots Signin Initial state 1`] = `
<div
  className="ui text container main main-content signin">
  <h1>
    Sign in
  </h1>
  <form
    className="ui form"
    onSubmit={[Function]}>
    <div
      className="field">
      <label
        htmlFor="username">
        Username
      </label>
      <input
        disabled={false}
        id="username"
        name="username"
        type="text" />
    </div>
    <div
      className="field">
      <label
        htmlFor="password">
        Password
      </label>
      <input
        disabled={false}
        id="password"
        name="password"
        type="password" />
    </div>
    <div
      className="field">
      <button
        className="ui positive button"
        id="localSigninButton"
        onClick={[Function]}
        tabIndex={undefined}>
        Sign in
      </button>
    </div>
  </form>
  <h4
    className="ui dividing header">
    Sign in with a Social Media Account
  </h4>
  <button
    className="ui button google plus"
    id="googleSigninButton"
    onClick={[Function]}
    tabIndex={undefined}>
    <i
      aria-hidden="true"
      className="icon google plus" />
    Google Plus
  </button>
  <button
    className="ui button facebook"
    id="facebookSigninButton"
    onClick={[Function]}
    tabIndex={undefined}>
    <i
      className="facebook icon" />
    Facebook
  </button>
  <button
    className="ui button twitter"
    id="twitterSigninButton"
    onClick={[Function]}
    tabIndex={undefined}>
    <i
      className="twitter icon" />
    Twitter
  </button>
  <div />
  
</div>
`;

exports[`Storyshots Signin Signing in 1`] = `
<div
  className="ui text container main main-content signin">
  <h1>
    Sign in
  </h1>
  <form
    className="ui form"
    onSubmit={[Function]}>
    <div
      className="field">
      <label
        htmlFor="username">
        Username
      </label>
      <input
        disabled={true}
        id="username"
        name="username"
        type="text" />
    </div>
    <div
      className="field">
      <label
        htmlFor="password">
        Password
      </label>
      <input
        disabled={true}
        id="password"
        name="password"
        type="password" />
    </div>
    <div
      className="field">
      <button
        className="ui positive disabled button"
        id="localSigninButton"
        onClick={[Function]}
        tabIndex={-1}>
        Sign in
      </button>
    </div>
  </form>
  <h4
    className="ui dividing header">
    Sign in with a Social Media Account
  </h4>
  <button
    className="ui disabled button google plus"
    id="googleSigninButton"
    onClick={[Function]}
    tabIndex={-1}>
    <i
      aria-hidden="true"
      className="icon google plus" />
    Google Plus
  </button>
  <button
    className="ui disabled button facebook"
    id="facebookSigninButton"
    onClick={[Function]}
    tabIndex={-1}>
    <i
      className="facebook icon" />
    Facebook
  </button>
  <button
    className="ui disabled button twitter"
    id="twitterSigninButton"
    onClick={[Function]}
    tabIndex={-1}>
    <i
      className="twitter icon" />
    Twitter
  </button>
  <div />
  <div
    className="ui message">
    <p>
      Signing in...
    </p>
  </div>
  
</div>
`;
